fix jumping overlay in sigle project component

--- a/src/scss/components/single-project.scss
+++ b/src/scss/components/single-project.scss
@@ -3,6 +3,8 @@
     // height: 35rem;
 
     &__header{
+        z-index: $z_index_max;
+
         .control-panel{
             background-color: $macBarGray;
             display: flex;
@@ -28,7 +30,8 @@
 
         &:hover .overlay{
             opacity: 1;
-            transform: translateY(0)
+            transform: translateY(0);
+            pointer-events: auto;
         }
 
         .overlay{
@@ -39,8 +42,9 @@
             opacity: 0;
             width: 100%;
             height: 100%;
-            z-index: $z_index_max;
+            z-index: $z_index_med;
             padding: 2rem 1.5rem;
+            pointer-events: none;
 
             transition: all ease-in-out 350ms;
 
